se agrega lo que quedaba pendiente de la hoja de vida

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-	<img src="foto.jpg" alt="foto" width="25%" height="25%">
+	<img src="imagenes/foto.jpg" alt="foto" width="25%" height="25%">
 	<h1>CRISTIAN CAMILO CARVAJAL VALENCIA</h1>
 	<h3>INFORMACION DE CONTACTO</h3>
 	<p>EMAIL: carvajalcamilo0515@gmail.com</p>
@@ -26,7 +26,96 @@
 		</ul>
 	</nav>
 	</section>
+    <hr>	
+	<section id="acerca de mi">
+	    <h2>ACERCA DE MI</h2>
+	    <p>Tengo 32 años, Soy funcionario en carrera administrativa en una entidad territorial con cinco añoz de experincia, bachiller tecnico en administracion con muchas ganas de aprender de este mundo de la programacion.</p>
+	</section>
+	<hr>
+	<section id="Experiencia laboral">
+	    <h2>EXPERIENCIA LABORAL</h2>
+		<!--en la etiqueta de abajo se pone la imagen guardada en la carpeta del archivo html y el alt=hace una descripcion de la imagen-->
+	    <img src="imagenes/image.jpeg" alt="alcaldia de la union valle" width="25%" height="25%">
+		<h3>ALCALDIA MUNICIPAL DE LA UNION VALLE</h3>
+		<!--aqui abajo se enlaza con la alcaldia la direccion de su sitio web-->
+		<p>trabajo actualmete en la <a href="https://www.launion-valle.gov.co"> alcaldia de la union valle </a> desde el 2020 y me desempeño como  auxiliar administrativo encargado</p>
+	<hr>
+	<h3>ALMACENES LA 14</h3>
+	<img src="imagenes/la14img.png" alt="almacenes la 14" width="25%" height="25%">
+	<p>trabaje como auxiar de control fisico desde marzo de 2013 a mayo de 2014</p>
+	<hr>
+	<h3>MONDELEZ INTERNATIONAL</h3>
+	<img src="imagenes/mondelezimg.jpeg" alt="mondelez international" width="25%" height="25%">
+	<p>trabaje en esta <a href="https://www.mondelezinternational.com/"> empresa </a> en un periodo de seis meses como operador de maquina GD5000, maquina encargada de poner el papel parafinado y papel laminado de la presentacion del producto halls stick.</p>
+	</section>
+	<hr>
+	<section id="Estudios">
+	<h2>ESTUDIOS</h2>
+	<p>graduado de la institucion educativa san jose de la union valle como bachiller tecnico en administracion</p>
+	<hr>
+    </section>
+    <section id="Referencias personales">	         
+	     <h2>REFERENCIAS PERSONALES</h2>
+	         <ul>
+		         <li>RUBEN DARIO VALENCIA</li>
+		         <li>ELIZABETH VALENCIA</li>
+		         <li>LINA MARCELA ORDOÑEZ</li>
+	         </ul>
+	</section>
+	<hr>
+	<section id="Mis metas">         
+           <h2>MIS METAS</h2>	
+	         <ol>
+		         <li>aprender PYTHON</li>
+		         <li> dominar HTML</li>
+		         <li>aprender JAVASCRIP</li>
+		         <li>convertirme en un desarrollador web</li>
+	        </ol>
+	</section>
+	<hr>
+<table border="1" cellpadding="10" cellspacing="0">
+	<tr>
+		<th>CUALIDADES</th>
+		<th>DESCRIPCION</th>
+	</tr>
+	<tr>
+		<td>TRABAJO EN EQUIPO</td>
+		<td><p>me caracterizo por ser una persona que se adapta bien a los equipos de trabajo</p></td>
+	</tr>
+	<tr>
+		<td>RESPONSABILIDAD</td>
+		<td><p>soy una persona que se cumple con las actividades que se me asignan</p></td>
+	</tr>
+	<tr>
+		<td>COMPROMISO</td>
+		<td>siempre dentro de mis posiblididades procuro cumplir con las labores que presenten un poco mas de disposicion</td>
+	</tr>
+
+</table>
+<hr>	
+<div>
+	<h1>FORMULARIO DE CONTACTO</h1>
+	<form>
+		<labol>Nombre de la Empresa:</labol>
+		<input type="text" name="empresa"  placeholder="Ingrese el nombre de la empresa" required>
+		<labol>Telefono de contacto:</labol>
+		<input type="tel" name="telefono" placeholder="Ingrese su telefono de contacto" required>
+		<labol>Correo Electronico:</labol>
+		<input type="email" name="correo" placeholder="Ingrese su correo electronico" required>
+		<labol>Mensaje</labol>
+		<textarea name="mensaje" rows="4" cols="50" placeholder="Escriba su mensaje aqui" required></textarea>
 	
-    
+	</form>
+</div>
+
+<hr>
+	<footer>
+		<p>HOJA DE VIDA DE  CRISTIAN CAMILO CARVAJAL VALENCIA</p>
+		<p>todos los derechos reservados 2025</p>
+
+	</footer>
+
 </body>
 </html>
+	
+    
